--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,7 @@ hdf5-graph = { path = ".", editable = true }
 numpy = "*"
 neo4j-python-driver = "*"
 h5py = "*"
+pytest = "*"
 
 [tool.pixi.tasks]
+test = "pytest"
